fixed the ratio so the picture doesn't get stretched

--- a/src/style.css
+++ b/src/style.css
@@ -28,6 +28,7 @@ body {
 
 main {
   height: 100vh;
+  width: 100vw;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -90,4 +91,15 @@ section {
 footer {
   color: #bebfbb;
   font-size: 12px;
+}
+
+/* MEDIA QUERIES */
+@media screen and (max-width: 640px) {
+  header {
+    grid-template-columns: repeat(2, 1fr);
+    padding: 32px 24px;
+  }
+  header p {
+    display: none;
+  }
 }
